# bigquery-social-listening

./: .env.example  .gitignore  CHEATSHEET.md  README.md  bigquery_tutorial.ipynb  main.py  pyproject.toml  social_listening_analytics.ipynb  social_listening_query.ipynb
docs/: gcloud-cli-setup.md  google-cloud-setup.md
