[project]
name = "google-cloud-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.33.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.0.0",
    "db-dtypes>=1.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "numpy>=1.26.0",
]
